<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Prefs -->
    <string name="prefs_string_file_MAIN_PREFS" translatable="false">MAIN_PREFS</string>
    
    <string name="prefs_string_LAST_NAME" translatable="false">LAST_NAME</string>
    <string name="prefs_boolean_KEEP_LAST_NAME" translatable="false">KEEP_LAST_NAME</string>
    <string name="prefs_boolean_TRIPP" translatable="false">TRIPP</string>
    
    <string name="prefs_int_PLAYER_IN_COLOR" translatable="false">PLAYER_IN_COLOR</string>
    <string name="prefs_int_PLAYER_EXT_COLOR" translatable="false">PLAYER_EXT_COLOR</string>
    <string name="prefs_int_PLAYER_SPEED" translatable="false">PLAYER_SPEED</string>
    <string name="prefs_int_PLAYER_RADIUS" translatable="false">PLAYER_RADIUS</string>
    
    <string name="prefs_int_NPC_IN_COLOR" translatable="false">NPC_IN_COLOR</string>
    <string name="prefs_int_NPC_EXT_COLOR" translatable="false">NPC_EXT_COLOR</string>
    <string name="prefs_int_NPC_RADIUS" translatable="false">NPC_RADIUS</string>    
    
	<!-- App -->
	<string name="help_text">Tilt the device to control the small circle, while dodging the big ones.</string>
    <string name="app_name">Dodge</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- Main Activity -->
    <string name="main_button_play">Play</string>
    <string name="main_button_settings">Settings</string>
    <string name="main_button_bestTimes">Best Times</string>
    <string name="main_button_exit">Exit</string>
    
    <!-- World Activity -->
    <string name="world_activity_title">Dodge</string>
    <string name="world_button_start">Start</string>
    <string name="world_button_stop">Stop</string>
    <string name="world_button_help">Help</string>
    <string name="world_helpDialog_title">What to do?</string>    
    
    <!-- Score Activity -->
    <string name="score_activity_title">Best Times</string>
    <string name="score_action_resetScore">Reset Times</string>
    <string name="score_editHint_name">Name</string>
    <string name="score_button_save">Save</string>
    <string name="score_resetDialog_title">Reset Times</string>
    <string name="score_resetDialog_message">Are you sure?</string>
    
    <string name="score_activity_listMaster">Master</string>
    <string name="score_activity_listExpert">Expert</string>
    <string name="score_activity_listAdvanced">Advanced</string>
    <string name="score_activity_listIntermediate">Intermediate</string>
    <string name="score_activity_listBeginner">Beginner</string>
    
    <!-- Settings Activity -->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_button_keepLastName">Keep last used name.</string>
    <string name="settings_button_tripp">Tripp?</string>
    <string name="settings_textView_player">Player Color</string>
    <string name="settings_textView_npc">NPC Color</string>
    <string name="settings_textView_playerSpeed">Player Speed</string>
    
    <!-- Color Picker -->
    <string name="colorPicker_newColor">New</string>
    <string name="colorPicker_defColor">Default</string>
</resources>
