<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/settings_switch_keepName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="switchClick"
        android:text="@string/settings_button_keepLastName" />

    <Switch
        android:id="@+id/settings_switch_tripp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="switchClick"
        android:text="@string/settings_button_tripp"/>

    <LinearLayout
        android:id="@+id/settings_linearLayout_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

       <TextView
            android:id="@+id/settings_textView_playerColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="#D5D5DA"
            
            android:text="@string/settings_textView_player"
            android:textSize="20sp"
            
            android:clickable="true"
            android:onClick="showColorPicker"/>

        <TextView
            android:id="@+id/settings_textView_npcColor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="#D5D5DA"
                        
            android:text="@string/settings_textView_npc"
            android:textSize="20sp"
            
            android:clickable="true"
            android:onClick="showColorPicker"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/settings_textView_playerSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_textView_playerSpeed" />

    <NumberPicker
        android:id="@+id/settings_numberPicker_playerSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <com.google.android.gms.ads.AdView
        android:id="@+id/score_adView_ads"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		ads:adSize="BANNER"
		ads:adUnitId="ca-app-pub-5104897685750315/3844846189"/>

</LinearLayout>