<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_rLayout_top"
        android:layout_width="match_parent"
        android:background="#ffdddddd"
        android:layout_height="50dp">
        
        <Button
            android:id="@+id/main_button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:onClick="buttonStop"
            android:text="@string/world_button_stop"/>
        
        <Button
            android:id="@+id/main_button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/main_button_stop"
            android:onClick="buttonHelp"
            android:text="@string/world_button_help"/>
        
        <Chronometer
            android:id="@+id/main_chronometer_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/main_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:onClick="buttonStart"
            android:text="@string/world_button_start"/>        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_rLayout_bot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">
    </RelativeLayout>

</LinearLayout>